docs/errors/examples/unknown-namespace-member/unknown-namespace-member.grob
// E1003 — a module-qualified call referencing a member the namespace does not have
// Eventual path: docs/errors/examples/unknown-namespace-member/unknown-namespace-member.grob
print(math.nope())
